# serving-runtime

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  MAINTAINERS  Makefile  README.md  checkstyle.xml  pom.xml  run-java.sh
.github/workflows/: deploy-packages.yml  maven.yml  test.yml
api/: pom.xml
api/src/main/resources/: log4j2.xml  reference.conf
api/src/main/resources/swagger/: swagger-ui-bundle.js  swagger-ui-standalone-preset.js  swagger-ui.css  swagger.html
api/src/test/resources/huggingface/: api.conf  manifest.json
commons/: pom.xml
dockerfiles/: full.Dockerfile  onnx.Dockerfile  tensorflow.Dockerfile
evaluator-huggingface/: README.md  pom.xml
evaluator-huggingface/converter/: convert.py  requirements.txt
evaluator-huggingface/huggingface-tokenizer-jni/: Cargo.toml  Makefile
evaluator-huggingface/huggingface-tokenizer-jni/src/: encoding.rs  lib.rs  tokenizer.rs
evaluator-huggingface/src/test/resources/: bpe.json  tokenizer.json
evaluator-onnx/: pom.xml
evaluator-onnx/python/: iris.py  pipeline-titanic.py
evaluator-onnx/src/main/resources/: reference.conf
evaluator-processors/: pom.xml
evaluator-tensorflow/: pom.xml
evaluator-tensorflow/h5_converter/: Makefile  h5_converter.py  requirements.txt
evaluator-tensorflow/h5_converter/hooks/: hook-tensorflow_core.py
evaluator-timeseries/: pom.xml
evaluator-torch/: Makefile  README.md  pom.xml
evaluator-torch/converter/: convert.py  requirements.txt
examples/: Dockerfile  manifest.json  pipeline_titanic.onnx
(+191 files in other folders)
