[package]
name = "huggingface_tokenizer_jni"
version = "0.1.0"
authors = ["Corentin Regal <corentin.regal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "huggingface_tokenizer_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.16"
tokenizers = { git = "https://github.com/huggingface/tokenizers" }
